# Yinsets3D_boolean

./: .gitignore  CMakeLists.txt  main.cpp  makefile  plottri.m
.history/src/: Config_20210327211628.h  Config_20210327212441.h  Config_20210327213429.h  Config_20210327213823.h  Config_20210327214006.h  Config_20210327214027.h  Config_20210327214510.h  Config_20210327221750.h  Config_20210327230428.h  Config_20210328000502.h  GluingCompactSurface_20210405174442.h  GluingCompactSurface_20210405174948.h  GluingCompactSurface_20210405175017.h  GluingCompactSurface_20210405175040.h  GluingCompactSurface_20210405175149.h  GluingCompactSurface_20210405175352.h  GluingCompactSurface_20210405175431.h  GluingCompactSurface_20210405175451.h  Line_20210328002730.h  Line_20210328002814.h  (+245 more)
doc/: Betti1Calculate.tex  OctreeIntersectionPPT.nav  OctreeIntersectionPPT.snm  OctreeIntersectionPPT.tex  OctreeIntersectionPPT.toc  OctreeIntersectionPPT.vrb  __latexindent_temp.tex  document.aux  document.fdb_latexmk  document.fls  document.synctex(busy)  document.tex  document1.tex  粘合紧曲面之间的交线取舍.tex
src/: #FindNearTriangle.h#  #Triangle.h#  #YinSet.h#  #exportdata_inner.h#  #makefile#  .#Triangle.h  .#exportdata_inner.h  Config.h  Cuboid.h  FindNearTriangle.h  GluingCompactSurface.h  Line.h  Locate.h  ObjInput.h  OctreeTriangleIntersection.h  Past.h  Plane.h  Point.h  PointCompare.h  PrePast.h  ReFactoryBoundary.h  ReduceIntersection.h  RemoveOverlap.h  Segment.h  SegmentCompare.h  Spacedivision.h  SurfacePatch.h  Totalheader.h  Triangle.h  TriangleCompare.h  TriangleIntersection.h  Triangulation.h  Vec.h  YinSet.h  exportdata_inner.h  makefile~  test.cpp  test.ex
test/: #makefile#  .#makefile  CMakeLists.txt  GCStest.cpp  OctreeTest.cpp  YSjoin.cpp  YSmeet.cpp  Yinsettest.cpp  cuboidtest.cpp  exportdata.h  findneartritest.cpp  importdata.h  importdata1.h  locatetest.cpp  makefile  pastetest.cpp  planetest.cpp  platest  platest.ex  prepastetest.cpp  reFacBoundarytest.cpp  rectangletest.cpp  removeoverlaptest.cpp  test  test.cpp  test.ex  test.m  test.m~  test1.cpp  triangletest.cpp  triangletest.cpp~  triangulationtest.cpp  triintersecttest.cpp  tritest  tritest.ex
(+47 files in other folders)
